Person-Card updates (#145)
* initial files for person-card

* Visualy working person-card prototype

* fixed tslint issues

* Removed MgtPersonDetails

* added PersonCardInteraction enum and support for both click and hover for person card in person component

* making sure image gets passed down from mgt-person to mgt-person-card

* [person-card] basic additional information functionality along with updated svg

* [person-card] updating styles for addtional information and icons

* [person-card] Adding propogation to handle parent click method

* [person-card] SIP and mailto events added to icons

* [person-card] adding teams chat icon and conditionally rendering if data exists

* Fixes #142 and #131

* [mgt-person] updating person to render person-card as a class

* [mgt-person] updating to carry image to personcard template

* [person-card] templating rework

* [person-card] adding onclick to additional details section

* [person-card] adding opacity for onhover

* [person-card] updating class for hoverstate

* [person] updating person component to render leftside if necessary due to clientwidth

* [person] adding openUp property for person-card flyout

* [person] handling for if person uses template so additional details button rerenders

* [person-card] stop propogation on root so click flyout does not close flyout

* [person-card] refactoring svg

* updated person-card sample

* [person] renderup position calculation

* [person-card] updating email ref to use helper

* [person-card/person] removing unecessary comments

* updated selectedPeople property

* [person/card] updating property to show additional details to isExtended

* [person] updating handler for hiding additional details with templates

* [person] fixing case that the additional details object isn't there yet

* [person-card] updating icons svg padding if rendered conditionally

* fixed open up issue

* [person-card] removing extra

--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -19,6 +19,11 @@ $color: var(--color, #{$ms-color-neutralDark});
 $email-font-size: var(--email-font-size, #{$ms-font-size-s});
 $email-color: var(--email-color, #{$ms-color-neutralPrimary});
 
+:host .root {
+  display: inline-block;
+  position: relative;
+}
+
 :host svg,
 mgt-person svg {
   width: $avatar-size-s;
@@ -31,8 +36,8 @@ mgt-person img {
   border-radius: 50%;
 }
 
-:host .root,
-mgt-person .root {
+:host .person-root,
+mgt-person .person-root {
   position: relative;
   display: flex;
   align-items: center;
@@ -125,4 +130,22 @@ mgt-person .user-email {
   -ms-grid-column: 2;
   grid-row: 2;
   -ms-grid-row: 2;
+}
+
+.root .flyout {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  opacity: 0;
+  transition-property: opacity;
+  transition-duration: 0.1s;
+  padding: 8px;
+}
+
+.root .flyout.visible {
+  display: inline-block;
+  opacity: 1;
+  &.openLeft {
+    right: 0;
+  }
 }
