Issue #166: added color css var to mgt-person comp

--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -21,6 +21,7 @@ $email-color: var(--email-color, #{$ms-color-neutralPrimary});
 
 :host .root {
   display: inline-block;
+  color: $color;
   position: relative;
 }
 
