inherit display for initials to be aligned

--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -19,8 +19,12 @@ $color: var(--color, #{$ms-color-neutralDark});
 $email-font-size: var(--email-font-size, #{$ms-font-size-s});
 $email-color: var(--email-color, #{$ms-color-neutralPrimary});
 
+:host {
+  display: inherit;
+}
+
 :host .root {
-  display: flex;
+  display: inline-block;
   color: $color;
   position: relative;
 }
