--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -176,7 +176,8 @@ mgt-tasks,
             vertical-align: middle;
             margin-right: 4px;
           }
-          span {
+          span,
+          select {
             vertical-align: middle;
           }
           .TaskDetail {
@@ -305,10 +306,6 @@ mgt-tasks,
           .TaskDetails {
             flex: 1 0 auto;
             margin: 14px 0 14px 4px;
-
-            .TaskDetail {
-              display: flex;
-            }
 
             .TaskPeople label {
               display: flex;
