--- a/src/components/mgt-people/mgt-people.scss
+++ b/src/components/mgt-people/mgt-people.scss
@@ -16,14 +16,21 @@ mgt-people .people-list {
   list-style-type: none;
   margin: $list-margin;
   padding: 0;
-  font-family: var(--default-font-family, "Segoe UI");
+  font-family: var(--default-font-family, 'Segoe UI');
   font-style: normal;
   font-weight: normal;
   display: flex;
+  align-items: center;
 }
 
 :host .people-person,
 mgt-people .people-person {
   margin: $avatar-margin;
   display: flex;
+}
+:host .overflow,
+mgt-people .overflow {
+  span {
+    vertical-align: middle;
+  }
 }
