--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -198,20 +198,15 @@ mgt-tasks,
           }
           .Picker {
             background-color: white;
-            display: block;
-            position: absolute;
             box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
             -webkit-background-clip: padding-box;
             -moz-background-clip: padding-box;
             background-clip: padding-box;
-            width: 450px;
+            width: 350px;
             color: var(--task-detail-color, black);
-            z-index: 1;
+            margin: 8px;
             mgt-people-picker {
               --separator-margin: 0px 10px 0px 10px;
-            }
-            &.Hidden {
-              display: none;
             }
           }
 
